# poc-llvm-kaleidoscope

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main  meson.build
.github/workflows/: main.yaml
conda/: dev-linux-64.yaml
scripts/: run-clang-tidy.sh
src/: KaleidoscopeJIT.h  toy.cpp
tests/: main_fibonacci.cpp
tests/scripts/: test-gen-objects.sh
